@@ -91,6 +91,7 @@ production.
   as lastTabIndex().
 * (bug 29332) Warn if user requests mediawiki-announce subscription but does not
   enter an e-mail address.
+* (bug 25375) Add canonical namespaces to JavaScript "wgNamespaceIds" 
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
